# bajutsu

./: .coverage.runnervmmklqx.pid6269.XP8AGTKx.HgZDg3xFHzrh  .coverage.runnervmmklqx.pid6275.XKwtdqtx.Ht4OJA1tXhRh  .coverage.runnervmmklqx.pid6278.XrvFlIJx.HocQNJQ9Sjth  .dockerignore  .env.example  .gitattributes  .gitignore  .mailmap  AGENTS.md  Brewfile  CLAUDE.md  CODE_OF_CONDUCT.ja.md  CODE_OF_CONDUCT.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  DESIGN.md  Makefile  NOTICE  README.ja.md  README.md  REPORT.md  SECURITY.ja.md  SECURITY.md  bajutsu.config.yaml  eslint.config.mjs  mkdocs.yml  projects.json  pyproject.toml  simpilot.config.yaml  simyoke.config.yaml
.claude/: settings.json
.claude/hooks/: session-start.sh
.claude/skills/: .gitignore
.githooks/: commit-msg  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  claude-review-prompt.md  dependabot.yml  docs-refresh-prompt.md  labeler.yml  roadmap-refresh-prompt.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android-e2e.yml  auto-merge.yml  ci.yml  claude-review.yml  codeql.yml  copilot-review.yml  dependency-audit.yml  devicefarm.yml  docs-refresh.yml  docs.yml  e2e.yml  idb-monitor.yml  ios-e2e.yml  pr-labels.yml  pr-title.yml  refresh.yml  roadmap-claims-gc.yml  roadmap-drift-check.yml  roadmap-id-repair.yml  roadmap-id.yml  roadmap-promote.yml  roadmap-proposal-approvals.yml  roadmap-refresh.yml  roadmap-topic-labels.yml  roadmap-tracking-issues.yml  serve-ui-e2e.yml  swift.yml  web-e2e.yml
BajutsuAndroid/: README.ja.md  README.md  build.gradle.kts
BajutsuAndroidServer/: Makefile  README.ja.md  README.md  settings.gradle.kts
BajutsuAndroidUIAutomatorServer/: Makefile  README.ja.md  README.md  build.gradle.kts  settings.gradle.kts
BajutsuAndroidUIAutomatorServer/server/: build.gradle.kts
BajutsuKit/: Package.swift  README.md
BajutsuKit/Runner/: project.yml
app/sample/: README.md
app/sample2/: project.yml
bajutsu/: __init__.py  __main__.py  _yaml.py  adb.py  adb_resident.py  agent.py  agent_factory.py  agents.py  ai_availability.py  ai_config.py  alerts.py  anthropic_client.py  artifact_perms.py  assertions.py  audit.py  backends.py  capabilities.py  capability_preflight.py  capture.py  claude_agent.py  claude_backed_agent.py  claude_code_agent.py  claude_enrich_agent.py  claude_triage.py  cli.py  codegen.py  codegen_common.py  codegen_emit.py  codegen_playwright.py  codegen_uiautomator.py  config.py  config_source.py  coverage.py  crawl.py  crawl_flows.py  crawl_guide.py  crawl_report.py  crawl_repro.py  crawl_tabs.py  deprecations.py  (+48 more)
bajutsu/agents/: __init__.py  alerts.py  anthropic_client.py  availability.py  claude.py  claude_backed.py  claude_enrich.py  claude_triage.py  enrich.py  factory.py  protocols.py
bajutsu/ai/: __init__.py  anthropic.py  banner.py  base.py  claude_code.py  prompts.py  registry.py
bajutsu/analysis/: __init__.py  audit.py  coverage.py  stats.py
bajutsu/analytics/: __init__.py  ledger.py  stats.py  usage.py
bajutsu/assertions/: __init__.py  _common.py  evaluate.py  network.py  schema.py  visual.py
bajutsu/cli/: __init__.py  _projects.py  _shared.py  handoff.py
bajutsu/codegen/: __init__.py  common.py  emit.py  playwright.py  uiautomator.py  xcuitest.py
bajutsu/config/: __init__.py  accessors.py  effective.py  (+2 more)
demos/: Makefile  README.ja.md  README.md  demo.config.yaml
docs/: README.md  ai-boundary.md  ai-development.md  architecture.md  ci.md  cli.md  cloud-hosting.md  codegen.md  concepts.md  configuration.md  contributor-workflow-tutorial.md  cookbook.md  devicefarm.md  drivers.md  dsl-grammar.md  evidence.md  getting-started-web.md  getting-started.md  glossary.md  index.md  ios-device-cloud.md  multi-platform.md  network.md  overview.md  recording.md  reporting.md  roadmap-workflow.md  roadmap.md  run-loop.md  sample-app.md  scenarios.md  selectors.md  self-hosting.md  showcase.md  vision.md  web-ui.md
overrides/: home.html
roadmaps/: README-ja.md  README.md
sample/: README.md  project.yml  sample.idmap.yaml
sample2/: project.yml
scripts/: allocate_roadmap_ids.py  be_claims.sh  build_roadmap_dashboard.py  build_roadmap_index.py  check_renumber_diff.py  check_roadmap_format.py  check_stale_roadmap_prs.py  coverage_summary.py  devicefarm_submit.py  docs_repo_links.py  e2e_changes.py  fix_roadmap_drift.py  gh_cli.py  install.sh  lint_pr.py  lint_roadmap.py  merge-roadmap-index.py  merge-roadmap-index.sh  merge-uv-lock.sh  new_roadmap_item.py  open_pr_be_ids.sh  open_pr_be_map.sh  preflight.sh  promote_roadmap_items.py  refresh_pr.py  render_diagrams.py  roadmap_ids.py  roadmap_query.py  serve.sh  sync_roadmap_topic_labels.py  sync_roadmap_tracking_issues.py  uv-lock-merge.sh  worktree.sh  xcuitest-runner-hash.sh
simpilot/: __init__.py  assertions.py  backends.py  cli.py  config.py  doctor.py  env.py  evidence.py  orchestrator.py  report.py  runner.py  scenario.py
simyoke/: __init__.py  _yaml.py  agent.py  alerts.py  assertions.py  backends.py  claude_agent.py  cli.py  config.py  doctor.py  dotenv.py  evidence.py  intervals.py  orchestrator.py  record.py  report.py  runner.py  scenario.py
tests/: conftest.py  driver_conformance.py  test_action_input_indirection.py  test_adb.py  test_adb_lifecycle.py  test_adb_resident.py  test_agent_factory.py  test_agents.py  test_ai_anthropic_adapter.py  test_ai_availability.py  test_ai_backend.py  test_ai_claude_code.py  test_ai_config.py  test_alerts.py  test_allocate_roadmap_ids.py  test_android_device_control.py  test_anthropic_client.py  test_archive.py  test_artifact_perms.py  test_assertions.py  test_audit.py  test_backends.py  test_capabilities.py  test_capability_preflight.py  test_capture.py  test_capture_firing.py  test_check_renumber_diff.py  test_check_roadmap_format.py  test_check_stale_roadmap_prs.py  test_claude_agent.py  test_claude_backed_agent.py  test_claude_code_agent.py  test_claude_enrich_agent.py  test_claude_triage.py  test_cli.py  test_cli_flakiness.py  test_cli_shared.py  test_cli_stats.py  test_codegen.py  test_codegen_common.py  (+132 more)
(+2840 files in other folders)
