[project]
name = "bajutsu"
version = "0.0.0"
description = "自然言語駆動の E2E テストツール"
readme = "DESIGN.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.50",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
# The idb backend shells out to the `idb` client; idb_companion is a separate
# `brew install facebook/fb/idb-companion`.
idb = ["fb-idb>=1.1.0"]
# The web backend drives a headless browser via Playwright (BE-0041). Imported lazily, only when
# a browser is actually started — never on the default path (the import guard locks this). The
# Chromium binary is a separate `playwright install chromium` (see demos/web), not a pip dep.
web = ["playwright>=1.49"]
visual = ["pillow>=10.0"]
mcp = ["fastmcp>=2.0.0"]
# Amazon Bedrock provider for the AI paths (BAJUTSU_AI_PROVIDER=bedrock); pulls in boto3 for SigV4.
bedrock = ["anthropic[bedrock]>=0.50"]
# The hosted-backend worker (`bajutsu worker`): leases queued runs from Redis via RQ (BE-0015).
# Imported lazily, only when a server backend is selected — never on the default path.
worker = ["redis>=5", "rq>=1.16"]
# The hosted-backend control plane (`serve --backend=server`): the FastAPI app that serves the
# same SPA + API over the swap-in seams. Imported only when the server backend is selected, never
# on the default path (the import guard in tests/serve/test_import_guard.py locks this).
server = ["fastapi>=0.110", "uvicorn>=0.27", "boto3>=1.34"]
# The hosted-backend system of record (`serve --backend=server` with BAJUTSU_DATABASE_URL): the
# SQLAlchemy `Repository` seam + Alembic migrations + the Postgres driver (BE-0015 7a). Imported
# only when a database is wired, never on the default path (the import guard locks this).
db = ["sqlalchemy>=2.0", "alembic>=1.13", "psycopg[binary]>=3.1"]
# GitHub OAuth login for the hosted control plane (BE-0015 7b-2). Imported only when OAuth is
# configured (BAJUTSU_OAUTH_GITHUB_*), never on the default path (the import guard locks this).
oauth = ["authlib>=1.3"]
# JSON Schema validation for the `responseSchema` assertion (BE-0048). Imported lazily, only when a
# responseSchema assertion is evaluated — never on the default path.
schema = ["jsonschema>=4.0"]
# The generated API reference (BE-0065): MkDocs + mkdocstrings render the public surface from its
# docstrings + typed signatures. `make docs` only — a separate, heavier path kept out of the
# deterministic `make check` gate, like on-device E2E. mkdocstrings reads signatures statically
# (via griffe), so it never imports the lazy/optional backends.
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]

[dependency-groups]
dev = [
    # The optional extras the gate imports and tests — referenced by name so each one's version is
    # declared once, in [project.optional-dependencies], and never duplicated here. The gate runs
    # with all of them installed: bedrock (boto3 for the AI path), server (FastAPI/uvicorn/boto3),
    # worker (Redis/RQ), db (SQLAlchemy/Alembic/psycopg), oauth (Authlib), mcp, visual (Pillow), and
    # schema (jsonschema).
    "bajutsu[bedrock,server,worker,db,oauth,mcp,visual,schema]",
    # Test/lint tooling — not part of any runtime extra, so declared directly here.
    "httpx>=0.27",  # FastAPI TestClient + real-uvicorn checks
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "ruff>=0.5",
    # Bundles the `shellcheck` binary so the gate lints shell scripts via uv alone
    # (no system package needed). The lone non-uv check is actionlint (CI-installed).
    "shellcheck-py>=0.10",
    "types-pyyaml>=6.0",
]

[project.scripts]
bajutsu = "bajutsu.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bajutsu"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "C4",
    "DTZ",
    "E",
    "F",
    "I",
    "N",
    "PERF",
    "PIE",
    "PT",
    "RUF",
    "S",
    "SIM",
    "T20",
    "UP",
]
ignore = [
    "ANN401",  # Any is used intentionally for flexible APIs
    "E501",    # line length is enforced by the formatter, not the linter
    "N818",    # exception names like ElementNotFound are clear without Error suffix
    "PT018",   # compound assert (guard + check) is often more readable as-is
    "RUF001",  # fullwidth characters are intentional in Japanese strings
    # S603 fires on every subprocess call; ours are argv lists (shell=False), and the dangerous
    # shell=True form is still caught by S602. S101 (assert) documents internal invariants across
    # the codebase, and bajutsu is never run under -O where asserts would be stripped.
    "S101",
    "S603",
]

[tool.ruff.lint.per-file-ignores]
"demos/**" = ["ANN", "T20", "S"]
"tests/**" = ["ANN", "T20", "S"]
# Dev helper scripts print progress (T20) and invoke git/uv via PATH (S607).
"scripts/**" = ["T20", "S607"]
# `_Loader` subclasses SafeLoader (it only tweaks on/off/yes/no resolving), so its `yaml.load`
# is safe. Ignore S506 at the file level rather than inline, so the line stays byte-identical to
# main — where CodeQL already dismissed the same py/unsafe-deserialization finding as a false
# positive (an inline change re-surfaces it as a new PR alert).
"bajutsu/_yaml.py" = ["S506"]
# backends.py installs the web extra via `uv`/`playwright` on PATH (S607); launch_server.py probes a
# config-driven readiness URL (S310). Both are intentional; ignored at the file level so the lines
# stay byte-identical to main (an inline noqa could re-surface a dismissed-on-main CodeQL finding).
"bajutsu/backends.py" = ["S607"]
"bajutsu/runner/launch_server.py" = ["S310"]

# Docstring rules (D) are NOT in the global `select` above; they are enforced only on the migrated
# public surface, by `make lint-docstrings` (BE-0065 phase 5). Setting the convention here keeps the
# rule choice in one place — it has no effect on `make lint` (which never selects D).
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-n auto"
# Collect only the project's own suite; ignore local git worktrees under worktree/.
testpaths = ["tests"]

[tool.coverage.run]
# Branch coverage too: an untested if/else path fails the floor even when every line ran.
branch = true

[tool.mypy]
python_version = "3.13"
strict = true

# The server/worker SDKs (RQ/Redis, boto3) are lazy imports behind the optional extras and ship no
# type stubs, so resolve their imports loosely — the seam adapters around them are typed and tested.
[[tool.mypy.overrides]]
module = [
    "redis",
    "redis.*",
    "rq",
    "rq.*",
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
    "authlib.*",
    "playwright.*",
    "jsonschema",
    "jsonschema.*",
]
ignore_missing_imports = true
