[project]
name = "bajutsu"
version = "0.0.0"
description = "自然言語駆動の E2E テストツール"
readme = "DESIGN.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
dependencies = [
    "jinja2>=3.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
# The Anthropic SDK for the AI authoring / investigation paths (record / triage / crawl-guide /
# alert-dismissal). The deterministic `run` / CI gate never reaches a model (BE-0101), so the SDK
# is an opt-in extra, not a base dependency — the base install stays AI-free (BE-0111). Imported
# lazily, only when a model is actually called; the import guard locks it off the default path.
ai = ["anthropic>=0.50"]
# The idb backend shells out to the `idb` client; idb_companion is a separate
# `brew install facebook/fb/idb-companion`.
idb = ["fb-idb>=1.1.0"]
# The web backend drives a headless browser via Playwright (BE-0041). Imported lazily, only when
# a browser is actually started — never on the default path (the import guard locks this). The
# Chromium binary is a separate `playwright install chromium` (see demos/web), not a pip dep.
web = ["playwright>=1.49"]
visual = ["pillow>=10.0"]
mcp = ["fastmcp>=2.0.0"]
# Amazon Bedrock provider for the AI paths (BAJUTSU_AI_PROVIDER=bedrock); pulls in boto3 for SigV4.
# Layers the Bedrock variant onto the `ai` extra, which is the single source of the `anthropic`
# version pin — so the Bedrock line only adds the `[bedrock]` extra, never a second version (BE-0111).
bedrock = ["bajutsu[ai]", "anthropic[bedrock]"]
# The hosted-backend worker (`bajutsu worker`): polls the control plane over HTTP (BE-0106).
# No extra dependencies needed (stdlib urllib); kept as an empty extra for backwards compatibility.
worker = []
# The hosted-backend control plane (`serve --backend=server`): the FastAPI app that serves the
# same SPA + API over the swap-in seams. Imported only when the server backend is selected, never
# on the default path (the import guard in tests/serve/test_import_guard.py locks this).
server = ["fastapi>=0.110", "uvicorn>=0.27", "boto3>=1.34"]
# The hosted-backend system of record (`serve --backend=server` with BAJUTSU_DATABASE_URL): the
# SQLAlchemy `Repository` seam + Alembic migrations + the Postgres driver (BE-0015 7a). Imported
# only when a database is wired, never on the default path (the import guard locks this).
db = ["sqlalchemy>=2.0", "alembic>=1.13", "psycopg[binary]>=3.1"]
# GitHub OAuth login for the hosted control plane (BE-0015 7b-2). Imported only when OAuth is
# configured (BAJUTSU_OAUTH_GITHUB_*), never on the default path (the import guard locks this).
oauth = ["authlib>=1.3"]
# JSON Schema validation for the `responseSchema` assertion (BE-0048). Imported lazily, only when a
# responseSchema assertion is evaluated — never on the default path.
schema = ["jsonschema>=4.0"]
# Evidence upload to object storage via a single URI (BE-0110). The SDK is imported lazily, only
# when `run --evidence-store` (or serve) actually uploads — never on the default path. `s3` covers
# S3-compatible targets (AWS / R2 / MinIO), `gcs` covers Google Cloud Storage, `cloud` is both.
s3 = ["boto3>=1.34"]
gcs = ["google-cloud-storage>=2.10"]
cloud = ["bajutsu[s3,gcs]"]
# The public website + docs portal and the generated API reference (BE-0093, BE-0065): MkDocs +
# mkdocs-material render the landing page and the bilingual `docs/` tree; mkdocstrings renders the
# Python surface from its docstrings + typed signatures; mkdocs-static-i18n drives the EN/JA switch.
# `make docs` only — a separate, heavier path kept out of the deterministic `make check` gate, like
# on-device E2E. mkdocstrings reads signatures statically (via griffe), so it never imports the
# lazy/optional backends. The `imaging` extra (Cairo/Pillow) backs Material's social cards, which are
# generated in CI only (`enabled: !ENV [CI, false]` in mkdocs.yml), so a bare `make docs` needs no
# native libraries.
docs = [
    "mkdocs-material[imaging]>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-static-i18n>=1.2",
]

[dependency-groups]
dev = [
    # The optional extras the gate imports and tests — referenced by name so each one's version is
    # declared once, in [project.optional-dependencies], and never duplicated here. The gate runs
    # with all of them installed: ai (the anthropic SDK for the AI paths, BE-0111), bedrock (its
    # Bedrock variant + boto3), server (FastAPI/uvicorn/boto3), worker (empty since BE-0106),
    # db (SQLAlchemy/Alembic/psycopg), oauth (Authlib), mcp, visual (Pillow), schema (jsonschema),
    # and cloud (boto3 + google-cloud-storage for BE-0110). Keeping `ai` here means `make check`
    # still imports and tests the AI paths; the AI-free guarantee is scoped to the *base* install.
    "bajutsu[ai,bedrock,server,worker,db,oauth,mcp,visual,schema,cloud]",
    # Test/lint tooling — not part of any runtime extra, so declared directly here.
    "httpx>=0.27",  # FastAPI TestClient + real-uvicorn checks
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "ruff>=0.5",
    # Bundles the `shellcheck` binary so the gate lints shell scripts via uv alone
    # (no system package needed). The lone non-uv check is actionlint (CI-installed).
    "shellcheck-py>=0.10",
    "types-pyyaml>=6.0",
]

[project.scripts]
bajutsu = "bajutsu.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bajutsu"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "C4",
    "DTZ",
    "E",
    "F",
    "I",
    "N",
    "PERF",
    "PIE",
    "PT",
    "RUF",
    "S",
    "SIM",
    "T20",
    "UP",
]
ignore = [
    "ANN401",  # Any is used intentionally for flexible APIs
    "E501",    # line length is enforced by the formatter, not the linter
    "N818",    # exception names like ElementNotFound are clear without Error suffix
    "PT018",   # compound assert (guard + check) is often more readable as-is
    "RUF001",  # fullwidth characters are intentional in Japanese strings
    # S603 fires on every subprocess call; ours are argv lists (shell=False), and the dangerous
    # shell=True form is still caught by S602. S101 (assert) documents internal invariants across
    # the codebase, and bajutsu is never run under -O where asserts would be stripped.
    "S101",
    "S603",
]

[tool.ruff.lint.per-file-ignores]
"demos/**" = ["ANN", "T20", "S"]
"tests/**" = ["ANN", "T20", "S"]
# Dev helper scripts print progress (T20) and invoke git/uv via PATH (S607).
"scripts/**" = ["T20", "S607"]
# `_Loader` subclasses SafeLoader (it only tweaks on/off/yes/no resolving), so its `yaml.load`
# is safe. Ignore S506 at the file level rather than inline, so the line stays byte-identical to
# main — where CodeQL already dismissed the same py/unsafe-deserialization finding as a false
# positive (an inline change re-surfaces it as a new PR alert).
"bajutsu/_yaml.py" = ["S506"]
# backends.py installs the web extra via `uv`/`playwright` on PATH (S607); launch_server.py probes a
# config-driven readiness URL (S310). Both are intentional; ignored at the file level so the lines
# stay byte-identical to main (an inline noqa could re-surface a dismissed-on-main CodeQL finding).
"bajutsu/backends.py" = ["S607"]
"bajutsu/runner/launch_server.py" = ["S310"]

# Docstring rules (D) are NOT in the global `select` above; they are enforced only on the migrated
# public surface, by `make lint-docstrings` (BE-0065 phase 5). Setting the convention here keeps the
# rule choice in one place — it has no effect on `make lint` (which never selects D).
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
# `not web` keeps the browser-driven conformance suite (BE-0114) out of the fast gate: it needs a
# real Chromium + the `web` extra and runs in the separate web CI job (`web-e2e.yml`, `-m web`),
# never here. Deselecting by marker (not just importorskip) means it stays out even when the `web`
# extra happens to be installed locally — e.g. after `make -C demos/web e2e` — so the gate is
# hermetic regardless of the venv's state.
addopts = "-n auto -m 'not web'"
markers = [
    "web: browser-driven test requiring the Playwright web extra + a Chromium binary (web CI only)",
]
# Collect only the project's own suite; ignore local git worktrees under worktree/.
testpaths = ["tests"]

[tool.coverage.run]
# Branch coverage too: an untested if/else path fails the floor even when every line ran.
branch = true

[tool.mypy]
python_version = "3.13"
strict = true

# The cloud SDKs (boto3, google-cloud-storage) are lazy imports behind the optional extras and ship
# no type stubs, so resolve their imports loosely — the seam adapters around them are typed and tested.
[[tool.mypy.overrides]]
module = [
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
    "google.cloud.*",
    "authlib.*",
    "playwright.*",
    "jsonschema",
    "jsonschema.*",
]
ignore_missing_imports = true
