[project]
name = "bajutsu"
version = "0.0.0"
description = "自然言語駆動の E2E テストツール"
readme = "DESIGN.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
dependencies = [
    "jinja2>=3.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
# The Anthropic SDK for the AI authoring / investigation paths (record / triage / crawl-guide /
# alert-dismissal). The deterministic `run` / CI gate never reaches a model (BE-0101), so the SDK
# is an opt-in extra, not a base dependency — the base install stays AI-free (BE-0111). Imported
# lazily, only when a model is actually called; the import guard locks it off the default path.
ai = ["anthropic>=0.50"]
# The web backend drives a headless browser via Playwright (BE-0041). Imported lazily, only when
# a browser is actually started — never on the default path (the import guard locks this). The
# Chromium binary is a separate `playwright install chromium` (see demos/web), not a pip dep.
web = ["playwright>=1.49"]
visual = ["pillow>=10.0"]
mcp = ["fastmcp>=2.0.0"]
# Amazon Bedrock provider for the AI paths (BAJUTSU_AI_PROVIDER=bedrock); pulls in boto3 for SigV4.
# Layers the Bedrock variant onto the `ai` extra, which is the single source of the `anthropic`
# version pin — so the Bedrock line only adds the `[bedrock]` extra, never a second version (BE-0111).
bedrock = ["bajutsu[ai]", "anthropic[bedrock]"]
# The hosted-backend worker (`bajutsu worker`): polls the control plane over HTTP (BE-0106).
# No extra dependencies needed (stdlib urllib); kept as an empty extra for backwards compatibility.
worker = []
# The worker's true runtime closure per backend (BE-0173) — the single name for "what a worker must
# install" so both the container build and the bare-metal install docs consume one definition. A run
# reaches `visual` (Pillow, screenshot assertions) and `schema` (jsonschema, `responseSchema`), so a
# backend extra alone under-installs and fails lazily at assertion time. Deliberately omits the
# control plane (`server`/`db`/`oauth`), the cloud SDKs (`cloud` — unneeded since BE-0160 made the
# worker credential-free), and the AI SDK (`ai`, opt-in only for the authoring/investigation paths).
worker-web = ["bajutsu[web,visual,schema]"]
# The iOS (XCUITest) worker needs no backend pip extra — `xcodebuild` is a system tool — so its
# closure is just the run-reached `visual` / `schema` extras (idb + its `fb-idb` client retired,
# BE-0290).
worker-ios = ["bajutsu[visual,schema]"]
# The hosted-backend control plane (`serve --backend=server`): the FastAPI app that serves the
# same SPA + API over the swap-in seams. Imported only when the server backend is selected, never
# on the default path (the import guard in tests/serve/test_import_guard.py locks this).
server = ["fastapi>=0.110", "uvicorn>=0.27", "boto3>=1.34"]
# The hosted-backend system of record (`serve --backend=server` with BAJUTSU_DATABASE_URL): the
# SQLAlchemy `Repository` seam + Alembic migrations + the Postgres driver (BE-0015 7a), plus
# `cryptography` for the encrypted-at-rest operator secret store (BE-0136). Imported only when a
# database is wired, never on the default path (the import guard locks this).
db = ["sqlalchemy>=2.0", "alembic>=1.13", "psycopg[binary]>=3.1", "cryptography>=42.0"]
# GitHub OAuth login for the hosted control plane (BE-0015 7b-2). Imported only when OAuth is
# configured (BAJUTSU_OAUTH_GITHUB_*), never on the default path (the import guard locks this).
oauth = ["authlib>=1.3"]
# JSON Schema validation for the `responseSchema` assertion (BE-0048). Imported lazily, only when a
# responseSchema assertion is evaluated — never on the default path.
schema = ["jsonschema>=4.0"]
# GitHub App installation-token auth for the private-repo config source (BE-0224): `cryptography`
# signs the RS256 App JWT. Imported lazily (`bajutsu.github.app`), only when App credentials are
# configured — a personal-access-token deployment never loads it, never on the default path.
githubapp = ["cryptography>=42.0"]
# Evidence upload to object storage via a single URI (BE-0110). The SDK is imported lazily, only
# when `run --evidence-store` (or serve) actually uploads — never on the default path. `s3` covers
# S3-compatible targets (AWS / R2 / MinIO), `gcs` covers Google Cloud Storage, `cloud` is both.
s3 = ["boto3>=1.34"]
gcs = ["google-cloud-storage>=2.10"]
cloud = ["bajutsu[s3,gcs]"]
# The AWS Device Farm batch submitter (BE-0235): boto3 drives Device Farm's control plane to upload
# the payload, schedule the run, and download artifacts. This is CI-side glue outside the
# deterministic core — `scripts/devicefarm_submit.py`, never reached by `run`/CI. boto3 is imported
# lazily behind the `DeviceFarmClient` seam, so the module imports without this extra (its logic is
# unit-tested against an in-memory fake).
aws = ["boto3>=1.34"]
# The public website + docs portal and the generated API reference (BE-0093, BE-0065): MkDocs +
# mkdocs-material render the landing page and the bilingual `docs/` tree; mkdocstrings renders the
# Python surface from its docstrings + typed signatures; mkdocs-static-i18n drives the EN/JA switch.
# `make docs` only — a separate, heavier path kept out of the deterministic `make check` gate, like
# on-device E2E. mkdocstrings reads signatures statically (via griffe), so it never imports the
# lazy/optional backends. The `imaging` extra (Cairo/Pillow) backs Material's social cards, which are
# generated in CI only (`enabled: !ENV [CI, false]` in mkdocs.yml), so a bare `make docs` needs no
# native libraries.
docs = [
    "mkdocs-material[imaging]>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-static-i18n>=1.2",
]

[dependency-groups]
dev = [
    # The optional extras the gate imports and tests — referenced by name so each one's version is
    # declared once, in [project.optional-dependencies], and never duplicated here. The gate runs
    # with all of them installed: ai (the anthropic SDK for the AI paths, BE-0111), bedrock (its
    # Bedrock variant + boto3), server (FastAPI/uvicorn/boto3), worker (empty since BE-0106),
    # db (SQLAlchemy/Alembic/psycopg), oauth (Authlib), mcp, visual (Pillow), schema (jsonschema),
    # cloud (boto3 + google-cloud-storage for BE-0110), and githubapp (cryptography for the BE-0224
    # App JWT). Keeping `ai` here means `make check`
    # still imports and tests the AI paths; the AI-free guarantee is scoped to the *base* install.
    "bajutsu[ai,bedrock,server,worker,db,oauth,mcp,visual,schema,cloud,githubapp]",
    # Test/lint tooling — not part of any runtime extra, so declared directly here.
    "httpx>=0.27",  # FastAPI TestClient + real-uvicorn checks
    "import-linter>=2.0",  # BE-0112: static core/contract/periphery layer-boundary contract
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "ruff>=0.5",
    # Bundles the `shellcheck` binary so the gate lints shell scripts via uv alone
    # (no system package needed). The lone non-uv check is actionlint (CI-installed).
    "shellcheck-py>=0.10",
    "types-pyyaml>=6.0",
]

[project.scripts]
bajutsu = "bajutsu.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bajutsu"]
# The generic XCUITest Simulator runner is built into bajutsu/_xcuitest_runner/ by the release
# step (`make runner-bundle`) and is gitignored, so force-include it as an artifact — otherwise
# hatchling would honor .gitignore and drop it. The glob no-ops when the directory is absent (a
# source checkout / Linux wheel), so the base wheel stays pure-Python. (BE-0292)
artifacts = ["bajutsu/_xcuitest_runner/**"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "C4",
    "DTZ",
    "E",
    "F",
    "I",
    "N",
    "PERF",
    "PIE",
    "PT",
    "RUF",
    "S",
    "SIM",
    "T20",
    "UP",
]
ignore = [
    "ANN401",  # Any is used intentionally for flexible APIs
    "E501",    # line length is enforced by the formatter, not the linter
    "N818",    # exception names like ElementNotFound are clear without Error suffix
    "PT018",   # compound assert (guard + check) is often more readable as-is
    "RUF001",  # fullwidth characters are intentional in Japanese strings
    # S603 fires on every subprocess call; ours are argv lists (shell=False), and the dangerous
    # shell=True form is still caught by S602. S101 (assert) documents internal invariants across
    # the codebase, and bajutsu is never run under -O where asserts would be stripped.
    "S101",
    "S603",
]

[tool.ruff.lint.per-file-ignores]
"demos/**" = ["ANN", "T20", "S"]
"tests/**" = ["ANN", "T20", "S"]
# Dev helper scripts print progress (T20) and invoke git/uv via PATH (S607).
"scripts/**" = ["T20", "S607"]
# `_Loader` subclasses SafeLoader (it only tweaks on/off/yes/no resolving), so its `yaml.load`
# is safe. Ignore S506 at the file level rather than inline, so the line stays byte-identical to
# main — where CodeQL already dismissed the same py/unsafe-deserialization finding as a false
# positive (an inline change re-surfaces it as a new PR alert).
"bajutsu/_yaml.py" = ["S506"]
# backends.py installs the web extra via `uv`/`playwright` on PATH (S607); launch_server.py probes a
# config-driven readiness URL (S310). Both are intentional; ignored at the file level so the lines
# stay byte-identical to main (an inline noqa could re-surface a dismissed-on-main CodeQL finding).
"bajutsu/backends.py" = ["S607"]
"bajutsu/runner/launch_server.py" = ["S310"]

# Docstring rules (D) are NOT in the global `select` above; they are enforced only on the migrated
# public surface, by `make lint-docstrings` (BE-0065 phase 5). Setting the convention here keeps the
# rule choice in one place — it has no effect on `make lint` (which never selects D).
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
# The two conformance suites that need a real backend stay out of the fast gate (BE-0114): `not
# web` drops the browser-driven suite (real Chromium + the `web` extra; runs in `web-e2e.yml`,
# `-m web`), and `not ondevice` drops the iOS (XCUITest) suite (a booted Simulator; runs in
# `ios-e2e.yml`). Deselecting by marker (not just importorskip) means each stays out even when its extra
# happens to be installed locally — so the gate is hermetic regardless of the venv's state.
addopts = "-n auto -m 'not web and not ondevice'"
markers = [
    "web: browser-driven test requiring the Playwright web extra + a Chromium binary (web CI only)",
    "ondevice: iOS Simulator test requiring a booted device + the showcase app (E2E workflow only)",
]
# Collect only the project's own suite; ignore local git worktrees under worktree/.
testpaths = ["tests"]

[tool.coverage.run]
# Branch coverage too: an untested if/else path fails the floor even when every line ran.
branch = true

[tool.mypy]
python_version = "3.13"
strict = true

# The cloud SDKs (boto3, google-cloud-storage) are lazy imports behind the optional extras and ship
# no type stubs, so resolve their imports loosely — the seam adapters around them are typed and tested.
[[tool.mypy.overrides]]
module = [
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
    "google.cloud.*",
    "authlib.*",
    "playwright.*",
    "jsonschema",
    "jsonschema.*",
]
ignore_missing_imports = true

# BE-0112: the core / contract / periphery layer model as an executable contract. `make lint-imports`
# (part of `make check`) fails when a deterministic-core module imports the periphery, keeping the
# verdict/evidence path free of the serve, AI and codegen stacks. Static analysis on the import
# graph — no model, nothing on the run/CI verdict path (prime directives #1 and #3 as a contract).
# The three layers, and where a new module belongs, are documented in docs/architecture.md.
[tool.importlinter]
root_package = "bajutsu"
# Needed so a `forbidden` contract can name external packages (BE-0129 forbids the db/oauth extras
# in the core). import-linter requires this at the top level, not per contract.
include_external_packages = true

# The deterministic core: the path that derives a verdict and evidence with no model and no
# periphery stack. It carries the prime directives and can only live in Bajutsu.
[[tool.importlinter.contracts]]
name = "Deterministic core is independent of the periphery"
type = "forbidden"
source_modules = [
    "bajutsu.orchestrator",
    "bajutsu.runner",
    "bajutsu.drivers.base",
    "bajutsu.assertions",
    "bajutsu.evidence",
    "bajutsu.report",
    "bajutsu.config",
    "bajutsu.scenario",
    "bajutsu.preflight",
    "bajutsu.capability_preflight",
    "bajutsu.capabilities",
    "bajutsu.doctor",
    "bajutsu.lint",
]
forbidden_modules = [
    "bajutsu.serve",
    "bajutsu.mcp",
    "bajutsu.codegen",
    "bajutsu.agents",
    "bajutsu.triage",
    "bajutsu.record",
    "bajutsu.record_capture",
    "bajutsu.screenshots",
    "bajutsu.crawl.guide",
    "bajutsu.github.actions",
    "bajutsu.notify",
]

# The deterministic core must also stay free of the hosting-only third-party extras (BE-0129): the
# `db` (SQLAlchemy/Alembic/psycopg/cryptography) and `oauth` (Authlib) stacks belong to
# `bajutsu/serve/` alone. The periphery contract above already keeps the core off `bajutsu.serve`;
# this forbids a core module from reaching the extras *directly*, which the internal layer graph
# can't express — so `include_external_packages` lets import-linter see the external import. The
# whole `bajutsu.drivers` package is covered here, beyond the `bajutsu.drivers.base` above.
[[tool.importlinter.contracts]]
name = "Deterministic core stays free of the db/oauth hosting extras"
type = "forbidden"
source_modules = [
    "bajutsu.config",
    "bajutsu.drivers",
    "bajutsu.runner",
    "bajutsu.scenario",
]
forbidden_modules = [
    "sqlalchemy",
    "alembic",
    "psycopg",
    "authlib",
    "cryptography",
]

# The contract surface consumers depend on: the scenario schema and the `Driver` Protocol. Keeping
# them independent of the runtime core (as well as the periphery, already covered above) makes the
# contract a portable inner layer — a consumer can read a scenario or implement a `Driver` without
# pulling in the orchestrator / runner / config, which underpins cross-version schema reads
# (BE-0119) and any future split of the periphery from the core.
[[tool.importlinter.contracts]]
name = "Scenario schema and Driver Protocol stay a portable inner contract"
type = "forbidden"
source_modules = [
    "bajutsu.scenario",
    "bajutsu.drivers.base",
]
forbidden_modules = [
    "bajutsu.orchestrator",
    "bajutsu.runner",
    "bajutsu.assertions",
    "bajutsu.evidence",
    "bajutsu.report",
    "bajutsu.config",
    "bajutsu.preflight",
    "bajutsu.doctor",
    "bajutsu.lint",
]
# `drivers/base.py`'s `Collector` Protocol reference is a TYPE_CHECKING-only dependency on the
# network-exchange model every driver reports through — pre-dating BE-0257, when `network.py` was a
# flat sibling module, not part of `bajutsu.evidence`. Packaging it under `evidence/` pulled this
# one pre-existing edge under the forbidden entry above; scoping the exception to it (rather than
# dropping `bajutsu.evidence` from `forbidden_modules`) keeps the contract meaningful for
# `evidence/core.py` / `intervals.py` / `visual.py` / `golden.py` / `redaction.py`, which the inner
# contract must still never reach.
ignore_imports = [
    "bajutsu.drivers.base -> bajutsu.evidence.network",
]
